manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sandra-app-service
  namespace: sandra-app
spec:
  selector:
    app: sandra-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
  type: ClusterIP
