manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sandra-app-ingress
  namespace: sandra-app
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: app.sandra.devops4.test-danit.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: sandra-app-service
            port:
              number: 80
